# Trips-Api

./: .gitignore  Dockerfile  Dockerfile.test  README.md  pyproject.toml
.github/workflows/: pipeline.yaml
src/: __init__.py  main.py
src/config/: app.py  env.py  logging.py  logging.yaml  server.py
src/repository/: secret.py  trips_bbdd.py
src/router/: __init__.py  trips.py
src/script/: poetry.py
src/service/: price_rules.py  test_price_rules.py
test/: __init__.py  trip_test.py
test/router/: test_trips.py
test/router_test/: trip_test.py
