[tool.poetry]
name = "trips-api"
version = "0.1.0"
description = "Microservicio de viajes"
authors = ["Daniel Lovera <daanilo2497@gmail.com>"]
readme = "README.md"
license = "MIT"

packages = [
    { include = "script", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.82.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}

[tool.poetry.scripts]
format = "script.poetry:format"
reformat = "script.poetry:reformat"
lint = "script.poetry:lint"
start = "script.poetry:start"
test = "script.poetry:test"

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
